Fix scrollbar style

--- a/plugins/theme-obsidian/styles/common.css
+++ b/plugins/theme-obsidian/styles/common.css
@@ -730,23 +730,12 @@ starlight-file-tree {
 }
 
 body {
-    scrollbar-color: var(--sl-color-hairline) transparent;
     scrollbar-gutter: stable;
-
-    &::-webkit-scrollbar {
-        width: 12px;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: transparent;
-    }
 }
 
 ::-webkit-scrollbar {
-    background-color: rgba(255, 255, 255, 0.05);
     width: 12px;
     height: 12px;
-    -webkit-border-radius: 12px;
     background-color: transparent;
 }
 ::-webkit-scrollbar-track {
